fix poor overflow fixes

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -19,7 +19,7 @@ body {
     background-attachment: fixed;
 }
 
-p, h1 {
+p, h1, h2 {
     word-wrap: anywhere;
 }
 
